<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--
    ******************************************************************
     共通 / common
    ******************************************************************
    -->


    <!-- アプリ名 -->
    <string name="app_name">Kumagusu</string>
    <string name="app_name_editor">Kumagusu Editor</string>

    <!--
    ******************************************************************
     設定 / setting / settings
    ******************************************************************
    -->

    <string name="pref_mn_setting">Preferences</string>

    <!-- 「メモリスト」カテゴリ / "Memorist" category-->
    <string name="pref_category_view">View</string>
    <string name="pref_cb_list_detail_visibility">To View details of list</string>

    <!-- 「メモ」カテゴリ / "Notes" category -->
    <string name="pref_category_memo">Note</string>
    <string name="pref_ds_memo_location_title">Notes folder</string>
    <string name="pref_cb_title_link_title">Rename files to match first line/title</string>  <!-- Seen in settings, underneath Encoding -->
    <string name="pref_cb_title_link_summary">Match the first line of the note and file name when you save.</string>  <!-- Not yet seen -->
    <string name="pref_enable_auto_link_title">Auto link numbers and addresses</string>  <!-- underline and allow clicking phone numbers, email addresses, and URLs -->
    <string name="pref_fixed_phrase_title">Edit Fixed phrases</string>
    <string name="pref_fixed_phrase_entries_control_dialog_title">Operation of fixed phrase</string>
    <string name="pref_fixed_phrase_entries_control_dialog_delete_title">Delete</string>
    <string name="pref_fixed_phrase_entries_control_dialog_delete_message">Delete fixed phrase/snippet?</string>
    <string name="pref_cb_encrypt_new_memo_tittle">Encrypt new notes</string>

    <!-- 「エディター」カテゴリ / "Editor" category -->
    <string name="pref_category_editor">Editor</string>
    <string name="pref_enable_editor_titlebar_title">Titlebar in editor with icons</string>
    <string name="pref_ls_font_family_title">Font family</string>
    <string name="pref_ls_font_size_title">Font size</string>

    <!-- 「セキュリティ」カテゴリ / "Security" category -->
    <string name="pref_category_security">Security</string>
    <string name="pref_cb_randam_name_title">Random file name for new encrypted files</string>
    <string name="pref_ls_autoclose_delaytime_title">Forget password timeout</string>

    <!-- 「エンコーディング」カテゴリ / "Encoding" category -->
    <string name="pref_category_encoding">Encoding</string>
    <string name="pref_ls_encoding_title">Encoding</string>
    <string name="pref_ls_encoding_summary">Sets the encoding of the note.</string>

    <!-- 「その他」カテゴリ / "Other" category -->
    <string name="pref_category_about">About</string>
    <string name="pref_version_title">Version</string>

    <!--
    ******************************************************************
     UI
    ******************************************************************
    -->

    <string name="ui_setting">Settings</string>
    <string name="ui_refresh">Update</string>
    <string name="ui_create">New</string>
    <string name="ui_ok">Ok</string>
    <string name="ui_yes">Yes</string>
    <string name="ui_no">No</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_td_input_password">Password</string>
    <string name="ui_td_input_new_password">New password</string>
    <string name="ui_td_reinput_new_password">New password (Confirm)</string>
    <string name="ui_td_input_password_empty">Password has not been entered.</string>
    <string name="ui_td_input_password_incorrect">Passwords do not match.</string>
    <string name="ui_search">Search in Note</string>
    <string name="ui_edit_start">Edit Mode</string>
    <string name="ui_edit_end">View Mode</string>
    <string name="ui_confirm">Confirmation</string>
    <string name="ui_close">Close</string>
    <string name="ui_add">Add</string>

    <!-- メモリスト / Memorist -->
    <string name="memo_list_emply_message">Note does not exist</string>
    <string name="memo_list_create_progress_dialog_title">Note list</string>
    <string name="memo_list_create_progress_dialog_message">Updating list....</string>

    <!-- ファイル操作ダイアログ / File operation dialog -->
    <string name="memo_file_control_dialog_title">Operation of Note</string>
    <string name="memo_file_control_dialog_copy_title">Copy destination folder</string>
    <string name="memo_file_control_dialog_move_title">Move destination folder</string>
    <string name="memo_file_control_dialog_delete_title">Delete</string>
    <string name="memo_file_control_dialog_delete_message">Delete file?</string>

    <string name="folder_control_dialog_title">Operation of Folder</string>
    <string name="folder_control_dialog_copy_title">Copy destination folder</string>
    <string name="folder_control_dialog_move_title">Move destination folder</string>
    <string name="folder_control_dialog_delete_title">Delete</string>
    <string name="folder_control_dialog_delete_message">Delete folder?</string>
    <string name="folder_control_dialog_delete_error">A folder is not empty.</string>
    <string name="folder_rename_control_dialog_title">Rename folder, new name</string>
    <string name="folder_rename_control_dialog_error_duplicate">A folder with that name already exists.</string>
    <string name="folder_rename_control_dialog_error_noinput">The folder name is not inputted.</string>
    <string name="memo_edit_dialog_confiem_save">Save changes to note?</string>  <!-- Do you want to save note changes? -->


    <string name="memo_edit_dialog_confiem_open_error">Note open error.</string>

    <!-- 新規作成ダイアログ / New creation dialog -->
    <string name="memo_list_control_dialog_title">Addition</string>
    <string name="folder_add_control_dialog_title">The folder name to add </string>
    <string name="memo_list_control_dialog_add_error">Add folder failed.</string>
    <string name="memo_list_control_dialog_add_error_duplicate">Folder already exists.</string>
    <string name="memo_list_control_dialog_add_error_noinput">Missing folder name.</string>

    <!-- メモ検索 / Memo search -->
    <string name="search_memo_control_dialog_title">Search</string>
    <string name="search_memo_list_post_title_start">Searching note....</string>
    <string name="search_memo_list_post_title_end">Results</string>

    <!-- 定型文 / Standard text-->
    <string name="fixed_phrase_dialog_title">Fixed phrase</string>
    <string name="fixed_phrase_pattern_letters">Pattern letters</string>

    <!-- メモのソート方法 / How to sort notes -->
    <string name="memo_sort_method_dialog_title">Sort conditions</string>

    <!-- メモのパスワード統一処理  / Unified password processing for notes -->
    <string name="unification_memo_type_title">Batch Encrypt/Decrypt</string>
    <string name="unification_memo_type_confirm_encrypt_start">Apply same password to all notes.</string>
    <string name="unification_memo_type_confirm_decrypt_start">Decrypted all notes.</string>
    <string name="unification_memo_type_confirm_cancel">Note type unification processing was canceled.</string>
    <string name="unification_memo_type_verify_memo_message">To verify a note under current folder.</string>
    <string name="unification_memo_type_encrypt_title">Apply same password to all notes.</string>
    <string name="unification_memo_type_decrypt_title">Decrypted all notes.</string>

    <!-- アクセス権 / Access rights -->
    <string name="request_permission_dialog_confirm_title">Permission setting</string>
    <string name="request_permission_dialog_confirm_information">Kumagusu saves memo in the storage.\nPlease allow access to the file.</string>

    <!--
    ******************************************************************
     その他 / others
    ******************************************************************
    -->


    <!-- メモファイル種別 / Memo file type -->
    <string name="etc_memo_type_text">Plain</string>
    <string name="etc_memo_type_secret1">Encryption</string>
    <string name="etc_memo_type_secret2">Encryption</string>
    <string name="etc_memo_type_folder">Folder</string>
    <string name="etc_memo_type_parent_folder">Parent foldere</string>
    <string name="etc_memo_type_none">(Unknown)</string>

    <!-- メモファイル処理 / Memo file processing -->
    <string name="etc_memo_file_untitled_4_filename">untitled</string>
    <string name="etc_memo_file_untitled_4_title">(untitled)</string>

</resources>
